// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a full article with all content items with dropcap template 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View />
      <View />
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`2. an article with interactives 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View />
      <View />
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`3. an article with no content 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`4. an article with no content if content is set as null 1`] = `null`;

exports[`5. an article with a nested markup in first paragraph displays a drop cap 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View />
      <View />
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`6. an article with heading tags 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View />
      <View />
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`7. an article with link 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View />
      <View />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`8. an article with italic link 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View />
      <View />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`9. an article with bold text followed by bold link 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View />
      <View />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`10. an article with italic and normal text link 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View />
      <View />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`11. an article with bold and italic text at the same time 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View />
      <View />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`12. an article with text wrapped in inline element 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View />
      <View />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`13. an article with paragraph with text and inline element 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View />
      <View />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`14. an article with inline inside a bold tag 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View />
      <View />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`15. an article starting with single quote 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View />
      <View />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`16. an article starting with double quote 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View />
      <View />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`17. an article skeleton with responsive items 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        />
      </View>
      <View />
      <View />
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ActivityIndicator />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
